# balloonDetection

./: Dockerfile  Dockerfile_ros2  README.MD  docker-compose.yml  inference.py  inference_video.py  requirements.txt  train.py
data/: dataset.yaml
data/test/labels/: 1_1_jpg.rf.b435a3b8d8aab6516d036a52a0445f55.txt  20240414_172942_jpg.rf.224f13690618536230c1f027c6206fa2.txt  20240414_172944_jpg.rf.6b556a85f308bca8910e30d1700e1e4e.txt  20240414_172948_jpg.rf.508dbb481ce7f7d6bda6724e180cf3bc.txt  20240414_172957_jpg.rf.5443daf0917f197a1563a2e3a7858c10.txt  20240414_172959_jpg.rf.5ad5b80299774fe5926f4c7b3fb40bc5.txt  20240414_173002_jpg.rf.eebe8fcce966d0250b9aa4329924afdf.txt  20240414_173411_jpg.rf.21a382d3b890044f6ce69ab9edd7591d.txt  20240414_173439_jpg.rf.8854a66bab8b664c1140f65f9ab6de4c.txt  20240414_173440_jpg.rf.4eeee563555a167737350da8ea7b8e8d.txt  20240414_173442_jpg.rf.14459111c5ad8c48d4ed2aa700aa3b91.txt  3_1_jpg.rf.081efd6f3b32af969896a3a507f74776.txt  4_1_jpg.rf.a757d1ebab360c26019361f56d081574.txt  Firefly-beyaz-tahtanin-onunde-elinde-2-tane-kirmizi-balon-tutan-insan-gunesli-hava-14484_jpg.rf.1f56db03f02afb86d72d3e38bf4bd962.txt  Firefly-beyaz-tahtanin-onunde-elinde-2-tane-kirmizi-balon-tutan-insan-gunesli-hava-3008_jpg.rf.5c969a916ea5334ff9863cd9782d3c90.txt  Firefly-beyaz-tahtanin-onunde-elinde-2-tane-kirmizi-balon-tutan-insan-gunesli-hava-63731_jpg.rf.6f22965e5bb423582a7beed95d5af26a.txt  Firefly-beyaz-tahtanin-onunde-elinde-2-tane-kirmizi-balon-tutan-insan-gunesli-hava-71935_jpg.rf.6297a5c0bbf913bc1ecb688ac0ca1ac8.txt  Firefly-beyaz-tahtanin-ustunde-2-tane-kirmizi-balon-gunesli-hava-30418_jpg.rf.803dd8aaac351492c71cab69ec35c80a.txt  Firefly-beyaz-tahtanin-ustunde-2-tane-kirmizi-balon-gunesli-hava-43596_jpg.rf.e0dd35d5c1061dde9c4d06bb9d3b08ed.txt  Firefly-kirmizi-balon-bulunan-resim-71684_jpg.rf.982fc6c2d6cc03045a225eebcc239dae.txt  (+87 more)
data/train/: labels.cache
data/valid/: labels.cache
ref/: predict.py  train.py
ros_package/ballon_inference/: package.xml  setup.cfg  setup.py
ros_package/yolo_ballon_inference_pipeline/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_package/yolo_ballon_inference_pipeline/yolo_ballon_inference_pipeline/: yolo_ballon_inference_pipeline.py
ros_package/yolo_balloon_detection/: CMakeLists.txt  package.xml
ros_package/yolo_detections_msg/: CMakeLists.txt  package.xml
training_projects/runs/v00/: args.yaml  (+2 more)
(+248 files in other folders)
