<?xml version="1.0"?>
<package format="3">
  <name>yolo_ballon_inference_pipeline</name>
  <version>0.0.0</version>
  <description>YOLO inference pipeline with ROS 2 integration</description>
  <maintainer email="hjenkins@example.com">hjenkins</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
